Bug 371720 - Discover does not display anything when PackageKit transaction fails
Summary: Discover does not display anything when PackageKit transaction fails
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: 5.8.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-26 18:57 UTC by Fabian Vogt
Modified: 2016-11-15 17:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2016-10-26 18:57:16 UTC
When the zypper PackageKit backend cannot open the database because it's currently in use, it reports this to the application:

Transaction error:  "System management is locked by the application with pid 11584 (/usr/lib/YaST2/bin/y2base).\nClose this application before trying again." PackageKit::Transaction(0x2b9d790)

However, discover seems to ignore this and just displays no applications and an empty settings page.
Comment 1 Aleix Pol 2016-11-15 17:58:02 UTC
Git commit f6bef735485b56fe5eacccf20af264733d9e684d by Aleix Pol.
Committed on 15/11/2016 at 17:45.
Pushed by apol into branch 'master'.

Show a Kirigami passiveNotification when a pk transaction fails

M  +5    -0    discover/qml/DiscoverWindow.qml
M  +1    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp
M  +2    -0    libdiscover/resources/AbstractResourcesBackend.h
M  +1    -0    libdiscover/resources/ResourcesModel.h

http://commits.kde.org/discover/f6bef735485b56fe5eacccf20af264733d9e684d