Show a Kirigami passiveNotification when a pk transaction fails

BUG: 371720